[package]
name = "rustcuts"
version = "0.1.0"
authors = ["Frank Luan <franklsf95@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "^2.33.0"  # command line arguments parsing
csv = "^1.1"  # CSV parsing
indicatif = {version="^0.12.0", features = ["with_rayon"]}  # progress indicator
rayon = "^1.2.0"  # multi-processing

[profile.release]
debug = true